# VirtAccr

./: .gitignore  CMakeLists.txt
data/: Length.txt  motion.txt
data/exp_data_textonly/20240322_1115/: motion.txt
data/exp_data_textonly/auto_20240111_102808/: GPS.txt  Ladar.txt  Length.txt  motion.txt
data/exp_data_textonly/auto_20240111_103124/: GPS.txt  Ladar.txt  Length.txt  motion.txt
data/exp_data_textonly/auto_20240111_103629/: GPS.txt  Ladar.txt  Length.txt  motion.txt
data/exp_data_textonly/auto_20240322_중악복도 일직선 왕복_조금빠르게_타일1,2/: GPS.txt  Ladar.txt  Length.txt  motion.txt
data/exp_data_textonly/auto_20240322_중앙복도 일직선 왕복_조금 느리게_타일1,2/: GPS.txt  Ladar.txt
data/exp_data_textonly/auto_20240322_중앙복도 일직선 왕복_타일1,2/: GPS.txt  Ladar.txt
src/: CMakeLists.txt  CmakeLists.txt  analysis.ipynb  length.csv  main.cpp  main.py  test.ipynb
